--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -33,7 +33,7 @@ form label {
  */
 .btn.is-invalid {
     border-color: $form-feedback-invalid-color;
-    &:focus {
+    &:focus-visible {
         border-color: $form-feedback-invalid-color;
         box-shadow: 0 0 0 $input-focus-width rgba($form-feedback-invalid-color, 0.25);
     }
@@ -282,19 +282,19 @@ textarea {
     &:disabled:checked[type="radio"] {
         background-image: none;
     }
-    &:focus:checked {
+    &:focus-visible:checked {
         background-color: $black;
         border-color: $black;
         box-shadow: 0 0 0 1px $black;
         opacity: 1;
     }
-    &:focus:not([checked]) {
+    &:focus-visible:not([checked]) {
         border-color: $gray-tint11;
         box-shadow: 0 0 0 1px $gray-tint11;
         opacity: 1;
     }
     &:hover:not([disabled]),
-    &:focus:not([disabled]) {
+    &:focus-visible:not([disabled]) {
         border-color: $neutral-900;
         box-shadow: 0 0 0 1px $neutral-900;
         opacity: 1;
@@ -320,7 +320,7 @@ textarea {
     input {
         @include form-check-input();
         &:hover:not([disabled]),
-        &:focus:not([disabled]) {
+        &:focus-visible:not([disabled]) {
             border: 0;
             box-shadow: none;
             outline: none !important;
@@ -406,7 +406,7 @@ input.form-radio-input {
         background-color: $green-tint01;
     }
 
-    input:focus + .slider {
+    input:focus-visible + .slider {
         box-shadow: 0 0 1px $green-tint01;
     }
 
@@ -1101,7 +1101,7 @@ form.taken-aanmaken {
 
                     &.checked,
                     &:hover,
-                    &:has(input:focus) {
+                    &:has(input:focus-visible) {
                         &::before {
                             background: $green-tint01;
                         }
@@ -1114,7 +1114,7 @@ form.taken-aanmaken {
                         }
                         color: $green-tint01;
                     }
-                    &:has(input:focus) {
+                    &:has(input:focus-visible) {
                         border-color: $gray-200;
                         &::before {
                             background: $green-tint01;
