--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -100,7 +100,7 @@ body.show-modal--first-filter {
         }
 
         .btn-close {
-            &:focus {
+            &:focus-visible {
                 outline-width: thin !important;
             }
         }
